--- a/hw3/Generate_evaluation.ipynb
+++ b/hw3/Generate_evaluation.ipynb
@@ -327,37 +327,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wordsim': SpearmanrResult(correlation=0.1966280262736731, pvalue=0.001023735510792839),\n",
+       " 'bats': {'encyclopedic_semantics': 0.02974186307519641,\n",
+       "  'E05 [name - occupation]': 0.0,\n",
+       "  'E10 [male - female]': 0.045454545454545456,\n",
+       "  'E07 [animal - sound]': 0.0,\n",
+       "  'E09 [things - color]': 0.2222222222222222,\n",
+       "  'E08 [animal - shelter]': 0.0,\n",
+       "  'E02 [country - language]': 0.0,\n",
+       "  'E03 [UK_city - county]': None,\n",
+       "  'E04 [name - nationality]': 0.0,\n",
+       "  'E06 [animal - young]': 0.0,\n",
+       "  'E01 [country - capital]': 0.0,\n",
+       "  'inflectional_morphology': 0.017448045522018802,\n",
+       "  'I09 [verb_Ving - Ved]': 0.0,\n",
+       "  'I05 [verb_inf - 3pSg]': 0.06666666666666667,\n",
+       "  'I06 [verb_inf - Ving]': 0.0,\n",
+       "  'I04 [adj - superlative]': None,\n",
+       "  'I03 [adj - comparative]': 0.0,\n",
+       "  'I08 [verb_Ving - 3pSg]': 0.023255813953488372,\n",
+       "  'I01 [noun - plural_reg]': 0.02127659574468085,\n",
+       "  'I10 [verb_3pSg - Ved]': 0.025,\n",
+       "  'I07 [verb_inf - Ved]': 0.020833333333333332,\n",
+       "  'I02 [noun - plural_irreg]': 0.0,\n",
+       "  'lexicographic_semantics': 0.021663952402666494,\n",
+       "  'L02 [hypernyms - misc]': 0.0,\n",
+       "  'L09 [antonyms - gradable]': 0.08888888888888889,\n",
+       "  'L08 [synonyms - exact]': 0.0,\n",
+       "  'L10 [antonyms - binary]': 0.06976744186046512,\n",
+       "  'L04 [meronyms - substance]': 0.0,\n",
+       "  'L03 [hyponyms - misc]': 0.02857142857142857,\n",
+       "  'L07 [synonyms - intensity]': 0.0,\n",
+       "  'L01 [hypernyms - animals]': 0.0,\n",
+       "  'L05 [meronyms - member]': 0.0,\n",
+       "  'L06 [meronyms - part]': 0.029411764705882353,\n",
+       "  'derivational_morphology': 0.010101010101010102,\n",
+       "  'D08 [verb+er_irreg]': 0.0,\n",
+       "  'D04 [over+adj_reg]': None,\n",
+       "  'D01 [noun+less_reg]': 0.0,\n",
+       "  'D09 [verb+tion_irreg]': 0.0,\n",
+       "  'D05 [adj+ness_reg]': 0.0,\n",
+       "  'D03 [adj+ly_reg]': 0.0,\n",
+       "  'D07 [verb+able_reg]': 0.0,\n",
+       "  'D06 [re+verb_reg]': 0.0,\n",
+       "  'D10 [verb+ment_irreg]': 0.0,\n",
+       "  'D02 [un+adj_reg]': 0.09090909090909091,\n",
+       "  'total': 0.01978567471735572},\n",
+       " 'msr': 0.6782608695652174}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "files2 = []\n",
-    "for iwin in windowList:\n",
-    "    for idim in dimList:\n",
-    "        for inum in numNS:\n",
-    "            files2.append(\"../../NLPdata/hw3/savedWV_word2vec_okay/wv_win%d_dim%d_num%d\" %(iwin, idim, inum)) "
+    "result[1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wordsim': SpearmanrResult(correlation=0.2216952963758795, pvalue=0.00020508625425706093),\n",
+       " 'bats': {'encyclopedic_semantics': 0.06183528405750628,\n",
+       "  'E05 [name - occupation]': 0.0,\n",
+       "  'E10 [male - female]': 0.09090909090909091,\n",
+       "  'E07 [animal - sound]': 0.0,\n",
+       "  'E09 [things - color]': 0.37037037037037035,\n",
+       "  'E08 [animal - shelter]': 0.0,\n",
+       "  'E02 [country - language]': 0.0,\n",
+       "  'E03 [UK_city - county]': None,\n",
+       "  'E04 [name - nationality]': 0.09523809523809523,\n",
+       "  'E06 [animal - young]': 0.0,\n",
+       "  'E01 [country - capital]': 0.0,\n",
+       "  'inflectional_morphology': 0.02730168111373785,\n",
+       "  'I09 [verb_Ving - Ved]': 0.0,\n",
+       "  'I05 [verb_inf - 3pSg]': 0.022222222222222223,\n",
+       "  'I06 [verb_inf - Ving]': 0.0,\n",
+       "  'I04 [adj - superlative]': None,\n",
+       "  'I03 [adj - comparative]': 0.0,\n",
+       "  'I08 [verb_Ving - 3pSg]': 0.0,\n",
+       "  'I01 [noun - plural_reg]': 0.1276595744680851,\n",
+       "  'I10 [verb_3pSg - Ved]': 0.075,\n",
+       "  'I07 [verb_inf - Ved]': 0.020833333333333332,\n",
+       "  'I02 [noun - plural_irreg]': 0.0,\n",
+       "  'lexicographic_semantics': 0.026295789633682932,\n",
+       "  'L02 [hypernyms - misc]': 0.0,\n",
+       "  'L09 [antonyms - gradable]': 0.1111111111111111,\n",
+       "  'L08 [synonyms - exact]': 0.0,\n",
+       "  'L10 [antonyms - binary]': 0.09302325581395349,\n",
+       "  'L04 [meronyms - substance]': 0.0,\n",
+       "  'L03 [hyponyms - misc]': 0.0,\n",
+       "  'L07 [synonyms - intensity]': 0.0,\n",
+       "  'L01 [hypernyms - animals]': 0.0,\n",
+       "  'L05 [meronyms - member]': 0.0,\n",
+       "  'L06 [meronyms - part]': 0.058823529411764705,\n",
+       "  'derivational_morphology': 0.0,\n",
+       "  'D08 [verb+er_irreg]': 0.0,\n",
+       "  'D04 [over+adj_reg]': None,\n",
+       "  'D01 [noun+less_reg]': 0.0,\n",
+       "  'D09 [verb+tion_irreg]': 0.0,\n",
+       "  'D05 [adj+ness_reg]': 0.0,\n",
+       "  'D03 [adj+ly_reg]': 0.0,\n",
+       "  'D07 [verb+able_reg]': 0.0,\n",
+       "  'D06 [re+verb_reg]': 0.0,\n",
+       "  'D10 [verb+ment_irreg]': 0.0,\n",
+       "  'D02 [un+adj_reg]': 0.0,\n",
+       "  'total': 0.028795691162998866},\n",
+       " 'msr': 0.673623188405797}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wordsim': SpearmanrResult(correlation=0.26693852967209275, pvalue=6.909894876809144e-06),\n",
+       " 'bats': {'encyclopedic_semantics': 0.047578964245630906,\n",
+       "  'E05 [name - occupation]': 0.047619047619047616,\n",
+       "  'E10 [male - female]': 0.09090909090909091,\n",
+       "  'E07 [animal - sound]': 0.0,\n",
+       "  'E09 [things - color]': 0.1111111111111111,\n",
+       "  'E08 [animal - shelter]': 0.0,\n",
+       "  'E02 [country - language]': 0.08333333333333333,\n",
+       "  'E03 [UK_city - county]': None,\n",
+       "  'E04 [name - nationality]': 0.09523809523809523,\n",
+       "  'E06 [animal - young]': 0.0,\n",
+       "  'E01 [country - capital]': 0.0,\n",
+       "  'inflectional_morphology': 0.02406780571674189,\n",
+       "  'I09 [verb_Ving - Ved]': 0.02127659574468085,\n",
+       "  'I05 [verb_inf - 3pSg]': 0.0,\n",
+       "  'I06 [verb_inf - Ving]': 0.0425531914893617,\n",
+       "  'I04 [adj - superlative]': None,\n",
+       "  'I03 [adj - comparative]': 0.0,\n",
+       "  'I08 [verb_Ving - 3pSg]': 0.0,\n",
+       "  'I01 [noun - plural_reg]': 0.0425531914893617,\n",
+       "  'I10 [verb_3pSg - Ved]': 0.025,\n",
+       "  'I07 [verb_inf - Ved]': 0.0625,\n",
+       "  'I02 [noun - plural_irreg]': 0.022727272727272728,\n",
+       "  'lexicographic_semantics': 0.018826135105204873,\n",
+       "  'L02 [hypernyms - misc]': 0.0,\n",
+       "  'L09 [antonyms - gradable]': 0.06666666666666667,\n",
+       "  'L08 [synonyms - exact]': 0.0,\n",
+       "  'L10 [antonyms - binary]': 0.09302325581395349,\n",
+       "  'L04 [meronyms - substance]': 0.0,\n",
+       "  'L03 [hyponyms - misc]': 0.02857142857142857,\n",
+       "  'L07 [synonyms - intensity]': 0.0,\n",
+       "  'L01 [hypernyms - animals]': 0.0,\n",
+       "  'L05 [meronyms - member]': 0.0,\n",
+       "  'L06 [meronyms - part]': 0.0,\n",
+       "  'derivational_morphology': 0.0,\n",
+       "  'D08 [verb+er_irreg]': 0.0,\n",
+       "  'D04 [over+adj_reg]': None,\n",
+       "  'D01 [noun+less_reg]': 0.0,\n",
+       "  'D09 [verb+tion_irreg]': 0.0,\n",
+       "  'D05 [adj+ness_reg]': 0.0,\n",
+       "  'D03 [adj+ly_reg]': 0.0,\n",
+       "  'D07 [verb+able_reg]': 0.0,\n",
+       "  'D06 [re+verb_reg]': 0.0,\n",
+       "  'D10 [verb+ment_irreg]': 0.0,\n",
+       "  'D02 [un+adj_reg]': 0.0,\n",
+       "  'total': 0.022525736238560523},\n",
+       " 'msr': 0.6759420289855073}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -459,6 +651,57 @@
    ],
    "source": [
     "result2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files2 = []\n",
+    "for iwin in windowList:\n",
+    "    for idim in dimList:\n",
+    "        files2.append(\"../../NLPdata/hw3/savedWV_svd/wv_svd_win%d_dim%d.txt\" %(iwin, idim)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[evaluate_models] Reading ../../NLPdata/hw3/savedWV_svd/wv_svd_win2_dim100.txt\n",
+      "[evaluate_models] Evaluating on WordSim...\n",
+      "[evaluate_models] Evaluating on BATS...\n",
+      "[evaluate_models] Evaluating on MSRPC...\n",
+      "[evaluate_models] Reading ../../NLPdata/hw3/savedWV_svd/wv_svd_win2_dim300.txt\n",
+      "[evaluate_models] Evaluating on WordSim...\n",
+      "[evaluate_models] Evaluating on BATS...\n",
+      "[evaluate_models] Evaluating on MSRPC...\n",
+      "[evaluate_models] Reading ../../NLPdata/hw3/savedWV_svd/wv_svd_win2_dim1000.txt\n",
+      "[evaluate_models] Evaluating on WordSim...\n",
+      "[evaluate_models] Evaluating on BATS...\n",
+      "[evaluate_models] Evaluating on MSRPC...\n",
+      "[evaluate_models] Reading ../../NLPdata/hw3/savedWV_svd/wv_svd_win5_dim100.txt\n",
+      "[evaluate_models] Evaluating on WordSim...\n",
+      "[evaluate_models] Evaluating on BATS...\n",
+      "[evaluate_models] Evaluating on MSRPC...\n",
+      "[evaluate_models] Reading ../../NLPdata/hw3/savedWV_svd/wv_svd_win5_dim300.txt\n",
+      "[evaluate_models] Evaluating on WordSim...\n",
+      "[evaluate_models] Evaluating on BATS...\n",
+      "[evaluate_models] Evaluating on MSRPC...\n",
+      "[evaluate_models] Reading ../../NLPdata/hw3/savedWV_svd/wv_svd_win5_dim1000.txt\n",
+      "[evaluate_models] Evaluating on WordSim...\n",
+      "[evaluate_models] Evaluating on BATS...\n"
+     ]
+    }
+   ],
+   "source": [
+    "result2 = evaluate.evaluate_models(files2)"
    ]
   },
   {
