--- a/hw3/jq2282.md
+++ b/hw3/jq2282.md
@@ -1,4 +1,4 @@
-# HW3 Word Embeddings
+HW3 Word Embeddings
 
 #### Jing Qian (jq2282)
 
@@ -35,23 +35,53 @@
 | word2vec  | 10   | 1000 | 1    | 0.173   | 0.035                          | 0.116                      | 0.015          | 0.667 |
 | word2vec  | 10   | 1000 | 5    | 0.267   | 0.048                          | 0.093                      | 0.023          | 0.676 |
 | word2vec  | 10   | 1000 | 15   | 0.291   | 0.029                          | 0.116                      | 0.018          | 0.668 |
-| SVD       | 2    | 100  | -    |         |                                |                            |                |       |
-| SVD       | 2    | 300  | -    |         |                                |                            |                |       |
-| SVD       | 2    | 1000 | -    |         |                                |                            |                |       |
-| SVD       | 5    | 100  | -    |         |                                |                            |                |       |
-| SVD       | 5    | 300  | -    |         |                                |                            |                |       |
-| SVD       | 5    | 1000 | -    |         |                                |                            |                |       |
-| SVD       | 10   | 100  | -    |         |                                |                            |                |       |
-| SVD       | 10   | 300  | -    |         |                                |                            |                |       |
-| SVDs      | 10   | 1000 | -    |         |                                |                            |                |       |
-
-
+| SVD       | 2    | 100  | -    | 0.162   | 0.039                          | 0.044                      | 0.021          | 0.648 |
+| SVD       | 2    | 300  | -    | 0.252   | 0.007                          | 0.111                      | 0.017          | 0.639 |
+| SVD       | 2    | 1000 | -    | 0.311   | 0.0                            | 0.089                      | 0.008          | 0.643 |
+| SVD       | 5    | 100  | -    | 0.266   | 0.031                          | 0.156                      | 0.026          | 0.648 |
+| SVD       | 5    | 300  | -    | 0.346   | 0.018                          | 0.067                      | 0.010          | 0.643 |
+| SVD       | 5    | 1000 | -    | 0.302   | 0.0                            | 0.022                      | 0.005          | 0.650 |
+| SVD       | 10   | 100  | -    | 0.366   | 0.021                          | 0.2                        | 0.024          | 0.651 |
+| SVD       | 10   | 300  | -    | 0.402   | 0.010                          | 0.0                        | 0.008          | 0.651 |
+| SVDs      | 10   | 1000 | -    | 0.339   | 0.0                            | 0.0                        | 0.001          | 0.656 |
 
 
 
 #### (2) Written analysis of the results
 
+**i) Does larger dimensionality always equal to better performance? In which categories and for which models? Why do you think this is?**
 
+No, larger dimensionality doesn't always equal to better performance. 
+
+For SVD model, when window size = 2, increasing the dimensionality increases the WordSim wheras window size = 5 or 10, increasing the dimentionality from 100 to 300 increases the WordSim and that from 300 to 1000 actually decreases the WordSim. For three BATS, increasing the dimensionality almost decreases all BATS values. MSR increases when increasing dimentionality from 100 to 300 and decreases when increasing dimentionality from 300 to 1000. I think maybe due to the small size of our training corpus, increasing the dimentionality (which is the k in SVD truncation) from 100 to 300 does introduce more information in the word embeddings. However, when increasing from 300 to 1000, more noises are conserved in the word embeddings, which leads to the decreasement in all metrics. 
+
+For word2vec SGNS model, following combinations of hyperparameters have certain categories have better performance with increasing dimensionality:
+
+window size = 2, NS = 1, BATS1, BATS3, MSR.  
+
+window size = 2, NS = 5, wordSim, BATS2
+
+window size = 2, NS = 15, wordSim
+
+window size = 5, NS = 5, BATS2
+
+window size = 10, NS = 1, BATS2 
+
+window size = 10, NS = 5, MSR
+
+Other hyperparameter combinations or categories don't have the increasing trend with larger dimensionality. We could see that with smaller window size and smaller number of negative samples, more categories show the increasing trend. I think it is due to the similar analysis for the SVD case, which is the limited training corpus size. With large window size and large negative sample sizes, if we also increase the dimensionality, we would overfit to the noise of our training corpus. Also, different categories show different performance changing behavior with the change of hyperparameters.
+
+
+
+**ii) Does better performance on one task mean better performance on the others? Provide a hypothesis as to why or why not?**
+
+No, better performance on one task does not necessarily mean better performance on the others. Because the three tasks here evaluate the word embeddings in three different aspects: WordSim353 evaluates the word similarity with cosine similarity and Spearman's $\rho$, the BATS did analogy prediction on various aspects  and MSR performs paraphrase detection using  logistic regression over cosine similarity scores.Even among different categories of BATS, the performance vary across the categories. For example, one word embeddings may have high word similarity from the WordSim353 but performs low on the MSR paraphrase task, like when window size=2, dim. = 100, changing N.s. from 5 to 15, the WordSim increases from 0.197 to 0.222 while the MSR decreases from 0.678 to 0.674.
+
+
+
+**iii) Was performance roughly similar across all analogy categories? If different, how did it vay? Why do you think you observed this variation? Perform a brief error analysis and compare erros across the BATS categories you selected for your table.**
+
+No, performance is not roughly similar across all analogy categories. It is affected by the hyperparameters. For SVD model, when increasing the dimensionality, except BATS 2, other BATS decreases. For word2vec model, for some hyperparameters (win = 2, dim = 100, ns in (1,5,15)), the performance are the same. But for others, are not. I think it also depends on the categories that I choose. For example, when increasing the window size, some categories may have a larger performance change, like the BATS 2(antonyms - binary), however others may not, then the BATS 3(total) got even. 
 
 
 
